# rusiwebson1

./: Cargo.toml
sql/: create.sql
src/: db.rs  hero.rs  main.rs  other.rs
templates/: index.tera
