[package]
name = "rusiwebson"
version = "0.1.0"
authors = ["fly2moon2 <fly2moon2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates", "tera_templates","serve","json"]